登陆失败修复
